# Chroma_ONNX

./: .gitignore  Chroma_ONNX.slnx  Directory.Packages.props  README.md  THIRD_PARTY_NOTICES.md  py_to_onnx.slnx  pyproject.toml  requirements-convert.txt  requirements.txt
assets/: southern_belle_prompt.txt
diagrams/: onnx_s2s_simplified.md  s2s_audio_inflow.md
docs/: runtime_layout.md
onnx_deploy/chroma-s2s-full-v2/: shared_weights_manifest.json
performance_analysis/: chroma_onnx_runtime_performance_analysis.md
scripts/: build_ortgenai_main.ps1  chroma_memory_probe.py  chroma_s2s_backend.py  chroma_s2s_benchmark.py  chroma_s2s_step_debug.py  chroma_serve_helper.py  debug_chroma_codec_encode.py  download_chatterbox_onnx_assets.ps1  download_chroma.py  download_gemma4_onnx.ps1  download_personaplex_assets.ps1  download_voxcpm2_onnx_assets.ps1  export_chroma_onnx.py  prepare_large_assets.ps1  publish_a100_runtime.ps1  publish_personaplex_a100_diff.ps1  publish_personaplex_a100_runtime.ps1  publish_voice_agent_a100_diff.ps1  publish_voice_agent_a100_runtime.ps1  rebuild_chroma_local_external_cache.py  repair_cache_links.ps1  run_local_service.ps1  smoke_local_runtime.ps1  smoke_personaplex_two_turn_tool.ps1  smoke_voice_agent_two_turn_tool.ps1  sync_gemma4_onnx_assets.ps1  test_chatterbox_onnx_parity.ps1
scripts/chroma_export/: __init__.py  dependencies.py  model_structure.py  onnx_export.py  safetensor_weights.py
src/ChromaOnnx.Core/: ChromaOnnx.Core.fsproj  StreamingPrimitives.fs
src/ChromaOnnx.OnnxRuntime/: ChromaNativeProcessor.fs  GemmaOnnxRunner.fs  (+8 more)
(+32 files in other folders)
