[project]
name = "chroma-onnx-python-tools"
version = "0.0.0"
description = "Python tooling for Chroma ONNX export, validation, and parity checks."
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    "transformers==5.0.0rc0",
    "accelerate>=1.7.0",
    "huggingface-hub>=1.3.0",
    "safetensors>=0.5.0",
    "av>=14.0.0",
    "librosa>=0.11.0",
    "audioread>=3.0.0",
    "soundfile>=0.13.0",
    "scipy>=1.15.0",
    "pillow>=11.0.0",
    "numpy>=2.2.0",
    "onnx>=1.18.0",
    "onnxscript>=0.3.0",
    "onnxruntime>=1.22.0",
    "psutil>=7.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
